--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@t3-oss/env-nextjs": "^0.7.0",
     "next": "^13.5.4",
     "next-auth": "^4.23.0",
+    "node-fetch": "^3.3.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "zod": "^3.22.4"
