--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "dev": "next dev",
     "postinstall": "prisma generate",
     "lint": "next lint",
-    "start": "next start"
+    "start": "next start",
+    "ai_test": "tsc && node src/server/ai.js"
   },
   "dependencies": {
     "@next-auth/prisma-adapter": "^1.0.7",
